--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./index.php:/usr/share/nginx/html/index.php
+      - ./api:/usr/share/nginx/html
       - ./default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
@@ -19,10 +19,10 @@ services:
   db:
     image: mysql:8.0
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: mydatabase
-      MYSQL_USER: myuser
-      MYSQL_PASSWORD: mypassword
+      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: api_basic
+      MYSQL_USER: root
+      MYSQL_PASSWORD: secret
     ports:
       - "3306:3306"
     volumes:
