fix: ajuste de docker

--- a/api/composer.json
+++ b/api/composer.json
@@ -4,7 +4,7 @@
       "App\\": "src/"
     },
     "files": [
-      "App/Utils/Helpers.php"
+      "src/Utils/Helpers.php"
     ]
   },
   "require": {
