--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,35 +8,72 @@ services:
       - ./default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
+    networks:
+      - app-network
   php:
-    image: php:8.2-fpm
+    build:
+      context: .
+      dockerfile: Dockerfile.php
     volumes:
       - ./api:/var/www/html
     working_dir: /var/www/html
+    environment:
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_NAME=api_basic
+      - DB_USER=root
+      - DB_PASSWORD=secret
     expose:
       - "9000"
-    command: php-fpm
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - app-network
   db:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: secret
       MYSQL_DATABASE: api_basic
-      MYSQL_USER: root
-      MYSQL_PASSWORD: secret
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-u",
+          "root",
+          "-psecret",
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-network
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    environment:
-      PMA_HOST: db
-      PMA_USER: myuser
-      PMA_PASSWORD: mypassword
+    image: phpmyadmin
+    restart: always
     ports:
-      - "8081:80"
+      - 8082:80
+    environment:
+      - PMA_HOST=db
+      - PMA_PORT=3306
+      - UPLOAD_LIMIT=30M
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   db_data: {}
